build: enable native access flag to silence JDK warnings